[project]
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "UP"]
fixable = ["I", "F541", "E712"]
ignore = ["E501", "E741", "E731"]

[tool.ruff.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.isort.sections]
"django" = ["django"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aiarena.settings"
addopts = "--tb=short --showlocals --browser=chromium"
markers = ["playwright"]
