[project]
name = "aiarena"
version = "0.0.0"
requires-python = "==3.12.*"
dependencies = [
    "awscli==1.31.6",
    "boto3==1.33.6",
    "celery==5.4.0",
    "confusable-homoglyphs==3.2.0",
    "django==4.2.20",
    "django-appconf==1.0.5",
    "django-avatar==8.0.0",
    "django-bootstrap-form==3.4",
    "django-constance[redis]==3.1.0",
    "django-debug-toolbar==3.2.2",
    "django-dirtyfields==1.9.7",
    "django-discord-bind",
    "django-extensions==3.2.3",
    "django-filter==25.1",
    "django-grappelli==3.0.8",
    "django-pglocks==1.0.4",
    "django-picklefield==3.1",
    "django-private-storage==3.1",
    "django-random-queryset==0.1.3",
    "django-redis==5.4.0",
    "django-registration-redux==2.10",
    "django-robots==6.1",
    "django-select2==8.4.1",
    "django-storages==1.13.2",
    "django-tables2==2.7.0",
    "django-vite==3.1.0",
    "djangorestframework==3.15.2",
    "docutils<0.23",
    "drf-yasg",
    "graphene-django==3.2.2",
    "graphene-file-upload",
    "markdown==3.6",
    "matplotlib==3.8.0",
    "numpy==1.26.3",
    "pandas==2.2.2",
    "pinax-theme-bootstrap==8.0.1",
    "psycopg2-binary==2.9.9",
    "pytz==2022.7.1",
    "redis==5.2.1",
    "sentry-sdk[django]==1.32.0",
    "six==1.16.0",
    "uwsgi==2.0.29",
    "wheel==0.45.1",
    "wiki==0.11.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
fixable = ["I", "F541", "E712"]
ignore = [
    "E501",
    "E741",
    "E731",
    "UP031",  # Want to fix those in the future
    "UP045",  # Want to fix those in the future
    "UP017"  # Want to fix those in the future
]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aiarena.settings"
addopts = "--tb=short --showlocals --browser=chromium"
markers = ["playwright"]
python_files = ["test_*.py", "tests.py"]

[tool.uv.sources]
django-discord-bind = { git = "https://github.com/aiarena/django-discord-bind.git", rev = "6c987450c2573ae73537d4ea89ec76679c0418f2" }
drf-yasg = { git = "https://github.com/max-muoto/drf-yasg.git", rev = "68cc6fa76848d1d0194d847569009eb603e516b2" }
graphene-file-upload = { git = "https://github.com/gulfofmaine/graphene-file-upload.git", rev = "63fa76ed694a942ef1dcb84abe2974930fc4858d" }

[dependency-groups]
dev = [
    "aws-encryption-sdk==4.0.0",
    "awscli==1.31.6",
    "boto3==1.33.6",
    "click==8.1.3",
    "coverage==7.4.0",
    "django-constance[database]==3.1.0",
    "django-fakeredis==0.1.2",
    "django-sslserver==0.22",
    "jinja2==3.1.2",
    "jsonschema==4.24.0",
    "pre-commit==3.3.3",
    "pytest==8.3.5",
    "pytest-django==4.11.1",
    "pytest-playwright==0.5.0",
    "pytest-xdist==3.6.1",
    "pyyaml==5.3.1",
    "questionary==2.0.1",
    "ruff==0.13.0",
    "sarge==0.1.7.post1",
    "werkzeug==3.1.3",
]
